# syncstorage-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.e2e.mysql.yaml  docker-compose.e2e.spanner.yaml
.circleci/: config.yml
syncserver/: Cargo.toml
syncserver-common/: Cargo.toml
syncserver-common/src/: lib.rs  metrics.rs  tags.rs
syncserver-db-common/: Cargo.toml
syncserver-db-common/src/: lib.rs
syncserver-settings/: Cargo.toml
syncserver-settings/src/: lib.rs
syncserver-web-common/: Cargo.toml
syncserver-web-common/src/: lib.rs  tags.rs
syncserver-web-common/src/middleware/: mod.rs  rejectua.rs  sentry.rs
syncserver/src/: dockerflow.rs  error.rs  lib.rs
syncserver/src/db/: mod.rs  transaction.rs
syncserver/src/db/mysql/: pool.rs
syncserver/src/db/spanner/: pool.rs
syncserver/src/db/tests/: support.rs
syncserver/src/server/: metrics.rs  mod.rs  test.rs
syncserver/src/tokenserver/: extractors.rs  handlers.rs  mod.rs
syncserver/src/tokenserver/auth/: browserid.rs  oauth.rs
syncserver/src/tokenserver/db/: models.rs  pool.rs
syncserver/src/web/: auth.rs  extractors.rs  handlers.rs  mod.rs  tags.rs  transaction.rs
syncserver/src/web/middleware/: mod.rs  rejectua.rs  sentry.rs  weave.rs
syncstorage-common/: Cargo.toml
syncstorage-common/src/: lib.rs  metrics.rs
syncstorage-db-common/: Cargo.toml
syncstorage-db-common/src/: error.rs  lib.rs  util.rs
syncstorage-mysql/: Cargo.toml
syncstorage-mysql/src/: batch.rs  models.rs  pool.rs  test.rs
syncstorage-settings/: Cargo.toml
syncstorage-settings/src/: lib.rs
syncstorage-spanner/: Cargo.toml
syncstorage-spanner/src/: batch.rs  models.rs  pool.rs  support.rs
syncstorage-spanner/src/manager/: deadpool.rs  session.rs
syncstorage-web/: Cargo.toml
syncstorage-web/src/: error.rs  lib.rs  metrics.rs  test.rs
syncstorage-web/src/api/: auth.rs  extractors.rs  handlers.rs  mod.rs
syncstorage-web/src/db/: mod.rs  transaction.rs
syncstorage-web/src/db/tests/: support.rs
syncstorage-web/src/middleware/: mod.rs  weave.rs
syncstorage/src/: main.rs
syncstorage/src/server/: mod.rs
syncstorage/src/tokenserver/: extractors.rs  mod.rs
syncstorage/src/tokenserver/auth/: browserid.rs  oauth.rs
syncstorage/src/tokenserver/db/: results.rs
syncstorage/src/web/: extractors.rs
syncstorage/src/web/middleware/: rejectua.rs  sentry.rs  weave.rs
tokenserver-auth/: Cargo.toml
tokenserver-auth/src/: browserid.rs  lib.rs  oauth.rs
tokenserver-common/: Cargo.toml
tokenserver-common/src/: error.rs  lib.rs
tokenserver-db/src/: models.rs  pool.rs
tokenserver-mysql/: Cargo.toml
tokenserver-mysql/src/: models.rs  pool.rs
tokenserver-settings/: Cargo.toml
tokenserver-settings/src/: lib.rs
tokenserver-web/: Cargo.toml
tokenserver-web/src/: error.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs
