[workspace]
resolver = "2"
members = [
    "syncserver-settings",
    "syncstorage-common",
    "syncstorage-db-common",
    "syncstorage-mysql",
    "syncstorage-settings",
    "syncstorage-spanner",
    "tokenserver-auth",
    "tokenserver-common",
    "tokenserver-mysql",
    "tokenserver-settings",
    "syncserver",
]
default-members = ["syncserver"]

[profile.release]
# Enables line numbers in Sentry reporting
debug = 1
