[package]
name = "syncserver-settings"
version = "0.10.2"
edition = "2021"

[dependencies]
config = "0.11"
serde = "1.0"
slog-scope = "4.3"
syncstorage-common = { path = "../syncstorage-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
tokenserver-settings = { path = "../tokenserver-settings" }
url = "2.1"
