[package]
name = "syncserver-web-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
actix-web = "3"
cadence = "0.26"
futures = { version = "0.3", features = ["compat"] }
hostname = "0.3.1"
lazy_static = "1.4.0"
regex = "1.4"
# pin to 0.19: https://github.com/getsentry/sentry-rust/issues/277
sentry = { version = "0.19", features = [
    "with_curl_transport",
] } # pin to 0.19 until on-prem sentry server is updated
sentry-backtrace = "0.19"
slog-scope = "4.3"
syncstorage-common = { path = "../syncstorage-common" }
woothee = "0.11"
