[package]
name = "syncserver"
version = "0.10.2"
license = "MPL-2.0"
authors = [
  "Ben Bangert <ben@groovie.org>",
  "Phil Jenvey <pjenvey@underboss.org>",
  "Mozilla Services Engineering <services-engineering+code@mozilla.com>",
]
edition = "2018"
default-run = "syncserver"

[dependencies]
actix-web = "3"
actix-cors = "0.5"
actix-service = "1.0.6"
docopt = "1.1.0"
google-cloud-rust-raw = "0.11.0"
lazy_static = "1.4.0"
hostname = "0.3.1"
# pin to 0.19: https://github.com/getsentry/sentry-rust/issues/277
sentry = { version = "0.19", features = ["with_curl_transport"] }
serde = "1.0"
slog = { version = "2.5", features = [
  "max_level_info",
  "release_max_level_info",
  "dynamic-keys",
] }
slog-async = "2.5"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.3"
slog-stdlog = "4.1"
slog-term = "2.6"
syncserver-settings = { path = "../syncserver-settings" }
syncstorage-web = { path = "../syncstorage-web", optional = true }
tokenserver-web = { path = "../tokenserver-web", optional = true }

[features]
default = ["syncstorage", "tokenserver"]
no_auth = []
syncstorage = ["dep:syncstorage-web"]
tokenserver = ["dep:tokenserver-web"]
