[package]
name = "syncstorage-mysql"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
base64 = "0.13"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
futures = { version = "0.3", features = ["compat"] }
slog-scope = "4.3"
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-common = { path = "../syncstorage-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
url = "2.1"

[dev-dependencies]
syncserver-settings = { path = "../syncserver-settings" }
diesel_logger = "0.1.1"
env_logger = "0.9"
