[package]
name = "tokenserver-mysql"
version = "0.10.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.40"
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
diesel_logger = "0.1.1"
diesel_migrations = { version = "1.4.0", features = ["mysql"] }
futures = { version = "0.3", features = ["compat"] }
http = "0.2.5"
serde = "1.0"
slog-scope = "4.3"
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-common = { path = "../syncstorage-common" }
tokenserver-settings = { path = "../tokenserver-settings" }
# pinning to 0.2.4 due to high number of dependencies (actix, bb8, deadpool, etc.)
tokio = { version = "0.2.4", features = ["macros", "sync"] }

[dev-dependencies]
syncserver-settings = { path = "../syncserver-settings" }
env_logger = "0.9"
